# FleetTracker

./: .gitignore  PLAN.md  README.md  docker-compose.yml  pyproject.toml
docs/: glossary.md
docs/adr/: 0001-redis-durability-posture.md  0002-dual-path-state-vs-event.md  0003-consumer-scaling-and-partitioning.md  0004-idempotency-effectively-once.md  0005-current-state-snapshot-read-model.md  0006-trimming-retention-backpressure.md  0007-gateway-edge-fanout-scaling.md  0008-replay-isolation.md
scripts/: fetch_routes.py  inspect_stream.py
src/fleet_tracker/: __init__.py
src/fleet_tracker/consumers/: __init__.py  __main__.py  analytics.py  dropout.py  geofence.py  materializer.py  stream_group.py  zones.py
src/fleet_tracker/gateway/: __init__.py  app.py  manager.py
src/fleet_tracker/gateway/static/: index.html
src/fleet_tracker/replay/: __init__.py  __main__.py  run.py
src/fleet_tracker/shared/: __init__.py  config.py  geo.py  models.py  redis_client.py
src/fleet_tracker/simulator/: __init__.py  __main__.py  route_vehicle.py  routes.py  run.py  vehicle.py
src/fleet_tracker/simulator/data/: routes.json
