[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-tracker"
version = "0.1.0"
description = "Real-time fleet tracker on Redis Pub/Sub + Streams — a hands-on pub/sub learning project"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "George Mihaila", email = "george.mihaila506@gmail.com" }]

dependencies = [
    "redis[hiredis]>=5.0",     # asyncio client + fast parser
    "fastapi>=0.111",          # gateway (WebSocket + REST)
    "uvicorn[standard]>=0.30", # ASGI server
    "pydantic>=2.7",           # shared message models
    "pydantic-settings>=2.3",  # config from env
    "shapely>=2.0",            # geofence polygons
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
load = [
    "locust>=2.29",            # M12 load testing
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
